--- a/ant/windows/windows-keygen.js.in
+++ b/ant/windows/windows-keygen.js.in
@@ -231,6 +231,7 @@ function createJavaKeystore() {
     file.WriteLine("wss.keystore=" + keyStore.replace(/\\/g, "\\\\"));
     file.WriteLine("wss.keypass=" + password);
     file.WriteLine("wss.storepass=" + password);
+    file.WriteLine("wss.host=localhost");
     file.Close();
 
     return true;
