--- a/ant/apple/apple-keygen.sh.in
+++ b/ant/apple/apple-keygen.sh.in
@@ -1,9 +1,9 @@
 #!/bin/bash
 ###############################################################################
-#                ${socket.name} Apple OS X KeyGen Utility                            #
+#                ${socket.name} Apple OS X KeyGen Utility                     #
 ###############################################################################
 #  Description:                                                               #
-#     1. Creates a self-signed Java Keystore for jetty wss://localhost        #
+#     1. Creates a self-signed Java Keystore for jetty wss://10.1.10.213      #
 #     2. Exports public certificate from Java Keystore                        #
 #     3. Imports into Apple OS X Trusted Root Certs                           #
 #                                                                             #
@@ -11,8 +11,8 @@
 #    java                                                                     #
 #                                                                             #
 #  Usage:                                                                     #
-#    $ ./${apple.keygen.name} "install"                                            #
-#    $ ./${apple.keygen.name} "uninstall"                                          #
+#    $ ./${apple.keygen.name} "install"                                       #
+#    $ ./${apple.keygen.name} "uninstall"                                     #
 #                                                                             #
 ###############################################################################
 
@@ -123,6 +123,7 @@ echo "wss.alias=${jks.alias}" > "$propspath"
 echo "wss.keystore=$keystorepath" >> "$propspath"
 echo "wss.keypass=$password" >> "$propspath"
 echo "wss.storepass=$password" >> "$propspath"
+echo "wss.host=10.1.10.213" >> "$propspath"
 echo "" >> "$propspath"
 check_exists  "$propspath"
 
