--- a/ant/linux/linux-keygen.sh.in
+++ b/ant/linux/linux-keygen.sh.in
@@ -3,7 +3,7 @@
 #                  ${socket.name} Linux KeyGen Utility                               #
 ###############################################################################
 #  Description:                                                               #
-#     1. Creates a self-signed Java Keystore for jetty wss://localhost        #
+#     1. Creates a self-signed Java Keystore for jetty wss://10.1.10.213      #
 #     2. Exports public certificate from Java Keystore                        #
 #                                                                             #
 #  Depends:                                                                   #
@@ -71,6 +71,7 @@ echo "wss.alias=${jks.alias}" > "$propspath"
 echo "wss.keystore=$keystorepath" >> "$propspath"
 echo "wss.keypass=$password" >> "$propspath"
 echo "wss.storepass=$password" >> "$propspath"
+echo "wss.host=10.1.10.213" >> "$propspath"
 echo "" >> "$propspath"
 check_exists  "$propspath"
 
