--- a/ant/self-sign.properties
+++ b/ant/self-sign.properties
@@ -1,6 +1,6 @@
 # Platform-independent info used at install time for wss:// signing
 # Values prefixed with an !exclamation-mark can't be determined until install time
-jks.cn=localhost
+jks.cn=10.1.10.213
 jks.city=Canastota
 jks.state=NY
 jks.country=US
