--- a/ant/apple/apple-keygen.sh.in
+++ b/ant/apple/apple-keygen.sh.in
@@ -3,7 +3,7 @@
 #                ${socket.name} Apple OS X KeyGen Utility                     #
 ###############################################################################
 #  Description:                                                               #
-#     1. Creates a self-signed Java Keystore for jetty wss://10.1.10.213      #
+#     1. Creates a self-signed Java Keystore for jetty wss://warehouse.headshop.grasshoppervape.com      #
 #     2. Exports public certificate from Java Keystore                        #
 #     3. Imports into Apple OS X Trusted Root Certs                           #
 #                                                                             #
@@ -123,7 +123,7 @@ echo "wss.alias=${jks.alias}" > "$propspath"
 echo "wss.keystore=$keystorepath" >> "$propspath"
 echo "wss.keypass=$password" >> "$propspath"
 echo "wss.storepass=$password" >> "$propspath"
-echo "wss.host=10.1.10.213" >> "$propspath"
+echo "wss.host=warehouse.headshop.grasshoppervape.com" >> "$propspath"
 echo "" >> "$propspath"
 check_exists  "$propspath"
 
