--- a/ant/windows/windows-keygen.js.in
+++ b/ant/windows/windows-keygen.js.in
@@ -231,7 +231,7 @@ function createJavaKeystore() {
     file.WriteLine("wss.keystore=" + keyStore.replace(/\\/g, "\\\\"));
     file.WriteLine("wss.keypass=" + password);
     file.WriteLine("wss.storepass=" + password);
-    file.WriteLine("wss.host=10.1.10.213");
+    file.WriteLine("wss.host=warehouse.headshop.grasshoppervape.com");
     file.Close();
 
     return true;
